2018-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of right subtraction operand in a.

2018-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue in right shift.

2018-11-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improvements for previous commit
	* src/SDCCsalloc.hpp:
	  New stack allocator: unaligned Chaitin.

2018-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Slightly more verbose error reporting.

2018-11-18 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  sdccconf_in.h,
	  configure,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/stm8/gen.c:
	  Provide backtrace on some internal errors.

2018-11-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix right shift of literal.

2018-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Include stm8-large in default target for regression tests.
	* src/stm8/gen.c:
	  Improve code generation for wide negation.

2018-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsalloc.hpp,
	  .version:
	  A bit of fine-tuning in the aligned Chaitin stack allocator to avoid some inefficiencies from alignment.

2018-11-14 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix issues in z80 code generation.
	* src/z80/mappings.i:
	  Consistently use space after comma in asm output.

2018-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/oldfmul.c:
	  Fix an issue in code generation for shifts found while experimenting with stack allocation.
	* src/SDCCmem.c,
	  src/SDCCsalloc.hpp,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc.c:
	  New stack allocator for stm8: aligned Chaitin.
	* device/lib/_fsmul.c:
	  Improve float multiplication routine a bit.
	* support/regression/tests/bug-2833.c:
	  Disable a new test for ds390 (where it fails).
	* src/stm8/gen.c: