@@ -1,3 +1,9 @@
+2018-11-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCmem.c,
+	  support/regression/tests/bug-2842.c:
+	  Fix bug #2842.
+
 2018-11-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
